tests/error/misc_errors/wasm_type_mismatch.err
Error: Wasm signature mismatch (at $FILE:10:4)
   | 
 8 | class Foo:
 9 |     @wasm
10 |     def add(self: "Foo", x: int, y: int, z: int) -> int: ...
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Signature of wasm function didn't match that in provided
   |                                                              file

Note: Declared signature: (int, int, int) -> int

Note: Signature in wasm:  (int, int) -> int

Guppy compilation failed due to 1 previous error
